	  device/include/mcs51/ds400rom.h: moved to device/include/ds400
	  device/include/mcs51/serial390.h: moved to device/include/ds390
	  device/include/mcs51/ds80c390.h, device/include/mcs51/tinibios.h:
	  moved back to device/include, since they are used also by ds400
	  device/include/Makefile.in: new include directories ds390, ds400
	  and xa51

2009-05-25 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c:
	  Fixed an ancient, but difficult to reproduce and detect bug, that
	  led to stack corruption under certain conditions.

2009-05-25 Borut Razem <borut.razem AT siol.net>

	* device/include/80c51xa.h, device/include/ds400rom.h,
	  device/include/ds80c390.h, device/include/ser.h,
	  device/include/ser_ir.h, device/include/serial.h,
	  device/include/serial390.h, device/include/tinibios.h:
	  moved to device/include/mcs51/
	  device/include/z180.h:
	  moved to device/include/z80/
	  implemented RFE #1930974: Some device specific header files are not
	  in their folders

2009-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  src/z80/peeph-z80.def,
	  src/SDCCasm.c:
	  Propagate rematerializability over addition of constants.

2009-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c:
	  Improved use of hl as inter-i-code temporary.

2009-05-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug #2795942.

2009-05-22 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genGenericShift): do not overwrite the shift count
	  for `val = 1 << val', fixes bug #2795131

2009-05-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (printIvalBitFields): cleaned up
	* src/pic16/glue.c (pic16_printIvalBitFields): same fix for bug 2791782

2009-05-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_iscntrl.c,
	* device/lib/_isdigit.c,
	* device/lib/_isgraph.c,
	* device/lib/_islower.c,
	* device/lib/_isprint.c,
	* device/lib/_ispunct.c,
	* device/lib/_isspace.c,
	* device/lib/_isupper.c,